--- a/calculator.html
+++ b/calculator.html
@@ -1,73 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Trade Calculator - Skibidi TD</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background:#000;
-      color:#fff;
-      font-family:'Montserrat',sans-serif;
-      text-align:center;
-      padding:20px;
-    }
-    h1 {
-      font-weight:900;
-      margin-bottom:20px;
-    }
-    select, button {
-      background:#111;
-      color:white;
-      border:1px solid #333;
-      border-radius:10px;
-      font-size:16px;
-      padding:12px;
-      margin:10px 0;
-      width:80%;
-      max-width:400px;
-    }
-    button {
-      background:var(--purple,#a855f7);
-      font-weight:bold;
-      cursor:pointer;
-    }
-    .result {
-      font-size:22px;
-      font-weight:900;
-      margin-top:20px;
-    }
-    a.back {
-      display:inline-block;
-      margin-top:30px;
-      color:#aaa;
-      text-decoration:none;
-      font-size:14px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Trade Calculator - Skibidi TD</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+
+<style>
+:root {
+  --purple:#a855f7;
+  --bg:#000;
+  --card:#0b0b0b;
+  --border:#1f1f1f;
+}
+
+body {
+  margin:0;
+  background:var(--bg);
+  color:white;
+  font-family:'Montserrat',sans-serif;
+}
+
+header {
+  text-align:center;
+  padding:25px;
+  font-size:28px;
+  font-weight:900;
+}
+
+.container {
+  max-width:500px;
+  margin:0 auto;
+  padding:15px;
+}
+
+select, button {
+  width:100%;
+  padding:14px;
+  border-radius:14px;
+  background:#111;
+  border:1px solid var(--border);
+  color:white;
+  font-size:16px;
+  margin-bottom:15px;
+}
+
+button {
+  background:var(--purple);
+  font-weight:900;
+  cursor:pointer;
+}
+
+.result {
+  text-align:center;
+  font-size:22px;
+  font-weight:900;
+  margin-top:20px;
+}
+
+.back {
+  display:block;
+  text-align:center;
+  margin-top:25px;
+  color:#aaa;
+  text-decoration:none;
+  font-size:14px;
+}
+</style>
 </head>
+
 <body>
 
-  <h1>Trade Calculator</h1>
+<header>Trade Calculator</header>
 
-  <p>Select the units below to check if a trade is fair.</p>
+<div class="container">
 
-  <select id="yourUnit">
-    <option value="">You Give...</option>
+  <label>You give:</label>
+  <select id="give">
+    <option value="">Select unit</option>
   </select>
 
-  <select id="theirUnit">
-    <option value="">You Get...</option>
+  <label>You get:</label>
+  <select id="get">
+    <option value="">Select unit</option>
   </select>
 
-  <button onclick="calculateTrade()">Check Trade</button>
+  <button onclick="checkTrade()">Check Trade</button>
 
   <div id="result" class="result">Select both units</div>
 
-  <a href="skibidi-td-v1-test.html" class="back">← Back to Value List</a>
+  <a class="back" href="skibidi-td-v1-test.html">← Back to Value List</a>
 
-  <script src="skibidi-td-data.js"></script>
-  <script src="calculator.js"></script>
+</div>
+
+<script src="skibidi-td-data.js"></script>
+<script src="calculator.js"></script>
+
 </body>
 </html>
