--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -1,8 +1,3 @@
-I've made the sorting case-insensitive and updated the rarity ordering to exactly: astral, cosmic, godly, divine, mythic, legendary (with any other rarities — e.g., "exclusive" or unknown values — placed after those). I also normalize rarities to lowercase when building card classes, filtering, and sorting so CSS classes like .rarity-astral match correctly.
-
-Paste this file over your current HTML (or save as a new file) and open it; the "Default Sort" will now order units in the requested sequence.
-
-```html name=skibidi-td.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -338,17 +333,9 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
         let currentPage = 1;
         const itemsPerPage = 15;
         
-        // Rarity order set exactly as requested:
-        // astral, cosmic, godly, divine, mythic, legendary
-        // any other rarities (e.g., exclusive) will be ranked after these
         const rarityOrder = {
-            'astral': 1,
-            'cosmic': 2,
-            'godly': 3,
-            'divine': 4,
-            'mythic': 5,
-            'legendary': 6,
-            'exclusive': 99 // put exclusive after the main ordered rarities
+            'astral': 1, 'cosmic': 2, 'divine': 3, 'godly': 4,
+            'exclusive': 5, 'mythic': 6, 'legendary': 7
         };
 
         const traitsMeta = {
@@ -404,8 +391,7 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
 
             let filteredKeys = Object.keys(unitDatabase).filter(key => {
                 const unit = unitDatabase[key];
-                const uRarity = (unit.rarity || '').toLowerCase();
-                const matchesRarity = currentFilter === 'all' || uRarity === currentFilter;
+                const matchesRarity = currentFilter === 'all' || unit.rarity === currentFilter;
                 const matchesSearch = unit.name.toLowerCase().includes(searchQuery.toLowerCase());
                 return matchesRarity && matchesSearch;
             });
@@ -417,8 +403,8 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
                 if (currentSort === 'value-desc') {
                     return parseValue(unitB.baseStats.value) - parseValue(unitA.baseStats.value);
                 } else {
-                    const weightA = rarityOrder[(unitA.rarity || '').toLowerCase()] || 999;
-                    const weightB = rarityOrder[(unitB.rarity || '').toLowerCase()] || 999;
+                    const weightA = rarityOrder[unitA.rarity] || 99;
+                    const weightB = rarityOrder[unitB.rarity] || 99;
                     if (weightA !== weightB) return weightA - weightB;
                     return unitA.name.localeCompare(unitB.name);
                 }
@@ -442,10 +428,8 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
                 const isSecondEdition = unit.secondEdition && unit.secondEdition.toLowerCase() === "yes";
                 const editionSub = isSecondEdition ? `<div class="second-edition-tag">2nd Edition</div>` : '';
 
-                const raritySlug = (unit.rarity || '').toLowerCase();
-
                 return `
-                    <div class="unit-card rarity-${raritySlug}" data-unit="${key}">
+                    <div class="unit-card rarity-${unit.rarity}" data-unit="${key}">
                         <div class="header-section">
                             <div class="unit-title">${unit.name}</div>
                             ${editionSub}
@@ -518,7 +502,7 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
         document.getElementById('next-btn').addEventListener('click', () => {
             const filteredTotal = Object.keys(unitDatabase).filter(key => {
                 const u = unitDatabase[key];
-                return (currentFilter === 'all' || (u.rarity || '').toLowerCase() === currentFilter) && 
+                return (currentFilter === 'all' || u.rarity === currentFilter) && 
                        u.name.toLowerCase().includes(searchQuery.toLowerCase());
             }).length;
             const maxPage = Math.ceil(filteredTotal / itemsPerPage);
@@ -532,5 +516,5 @@ Paste this file over your current HTML (or save as a new file) and open it; the 
         window.onload = renderValueList;
     </script>
 </body>
+
 </html>
-```
