--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -2,24 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Skibidi TD — Final Calculator (Traits + Icons + Demand)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Skibidi TD — Improved Calculator</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #0d0d0d;
-      --card: #161616;
-      --panel: #1c1c1c;
-      --box: #242424;
-      --border: #333;
-      --muted: #909090;
+      --bg: #050506;
+      --card: #0f0f11;
+      --panel: #111214;
+      --box: #141618;
+      --border: #232529;
+      --muted: #9aa0a5;
       --text: #fff;
+      --radius: 12px;
 
-      /* Gradient helpers */
-      --accent: linear-gradient(90deg, #8b4bff, #ff4b4b);
+      /* Colors for rarity */
+      --g-astral: linear-gradient(90deg, #7f00ff, #00ffd5);
+      --g-cosmic: linear-gradient(90deg, #b800e6, #6cedf0);
+      --g-divine: linear-gradient(90deg, #ff00c8, #2248ff);
+      --g-godly: linear-gradient(90deg, #7b00e6, #6367ff);
+      --g-exclusive: linear-gradient(90deg, #00d1ff, #4fe0a3);
+      --g-mythic: linear-gradient(90deg, #ff6d68, #ffb86b);
+      --g-legendary: linear-gradient(90deg, #ffd54a, #ff7a00);
 
-      /* Badge sizes for traits */
-      --badge-size: 20px;
+      /* Trait colors */
+      --clean: #4b7aff;
+      --gm: #f9a825;
+      --ms: #02c39a;
+      --sp: #9c27b0;
+      --spd: #e91e63;
     }
 
     * {
@@ -35,7 +46,7 @@
     }
 
     body {
-      padding: 22px;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -50,60 +61,19 @@
       gap: 12px;
     }
 
-    /* Search + Menu */
-    .top-row {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      justify-content: space-between;
-    }
-
-    #search-bar {
-      flex: 1;
-      padding: 12px 16px;
-      border-radius: 22px;
-      background: var(--card);
-      border: 1px solid var(--border);
-      color: var(--text);
-      outline: none;
-    }
-
-    .menu-btn {
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      background: var(--card);
-      border: 1px solid var(--border);
-      display: grid;
-      place-items: center;
-      cursor: pointer;
-    }
-
-    .menu-btn .dots {
-      width: 6px;
-      height: 6px;
-      background: var(--muted);
-      border-radius: 50%;
-      box-shadow: 0 -10px 0 0 var(--muted), 0 10px 0 0 var(--muted);
-    }
-
     /* Calculator Panels */
     .calc-container {
       display: flex;
-      justify-content: center;
       gap: 20px;
       margin-top: 20px;
-      padding: 20px;
     }
 
     .calc-panel {
       flex: 1;
-      max-width: 600px;
       padding: 20px;
       background: var(--panel);
-      border: 1px solid var(--border);
       border-radius: 12px;
+      border: 1px solid var(--border);
     }
 
     .calc-title {
@@ -113,236 +83,244 @@
       margin-bottom: 15px;
     }
 
-    /* Unit areas */
-    .calc-area {
+    .calc-zone {
       display: grid;
       grid-template-columns: repeat(auto-fill, 76px);
       gap: 10px;
-      justify-content: center;
-      align-items: center;
-      background: var(--box);
-      padding: 10px;
-      border-radius: 12px;
-      min-height: 200px;
     }
 
-    .calc-thumb {
+    /* Calculator thumbnails */
+    .unit-thumbnail {
+      position: relative;
+      background: var(--card);
       width: 76px;
       height: 76px;
-      border-radius: 10px;
-      background: var(--box);
+      border-radius: 12px;
       border: 1px solid var(--border);
-      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
-    .calc-thumb .img {
+    .unit-thumbnail img {
       width: 100%;
       height: 100%;
-      background-size: cover;
-      background-position: center;
+      object-fit: cover;
+      border-radius: 12px;
     }
 
-    .calc-thumb .quantity {
+    .trait-badge {
       position: absolute;
-      bottom: 4px;
-      right: 6px;
-      background: #000;
-      padding: 2px 5px;
-      border-radius: 6px;
+      top: 8px;
+      left: 8px;
+      padding: 3px 8px;
+      border-radius: 8px;
+      font-size: 12px;
+      font-weight: 700;
       color: #fff;
+    }
+
+    .trait-badge.clean {
+      background: var(--clean);
+    }
+
+    .trait-badge.gm {
+      background: var(--gm);
+    }
+
+    .trait-badge.ms {
+      background: var(--ms);
+    }
+
+    .trait-badge.sp {
+      background: var(--sp);
+    }
+
+    .trait-badge.spd {
+      background: var(--spd);
+    }
+
+    .quantity-badge {
+      position: absolute;
+      bottom: 8px;
+      right: 8px;
+      background: #000;
+      color: #fff;
+      border-radius: 8px;
       font-weight: 700;
       font-size: 12px;
+      padding: 3px 6px;
     }
 
-    .calc-thumb .trait-icon {
+    .demand-label {
       position: absolute;
-      top: 4px;
-      left: 6px;
-      width: var(--badge-size);
-      height: var(--badge-size);
-    }
-
-    .calc-thumb .demand {
-      position: absolute;
-      top: 40px;
-      left: 4px;
+      bottom: 8px;
+      left: 8px;
+      background: var(--panel);
+      color: #fff;
+      border-radius: 8px;
+      padding: 3px 8px;
       font-size: 12px;
       font-weight: 700;
-      color: var(--text);
-    }
-
-    .calc-total {
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    .calc-verdict {
-      text-align: center;
-      font-weight: 900;
-      padding: 10px;
-      margin-top: 10px;
-      color: #6ea0ff;
     }
 
     /* Trait Modal */
-    .trait-modal {
+    .modal-overlay {
+      display: none;
       position: fixed;
       inset: 0;
       background: rgba(0, 0, 0, 0.9);
-      display: flex;
-      align-items: center;
+      z-index: 999;
       justify-content: center;
-      z-index: 9999;
+      align-items: center;
     }
 
     .modal-box {
-      width: 300px;
-      background: var(--panel);
-      border: 1px solid var(--border);
+      background: var(--card);
+      border-radius: 12px;
       padding: 20px;
-      border-radius: 10px;
+      border: 1px solid var(--border);
+      width: 320px;
     }
 
     .modal-title {
       text-align: center;
       font-weight: 900;
-      text-transform: uppercase;
       margin-bottom: 15px;
     }
 
-    .trait-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+    .trait-list {
+      display: flex;
+      flex-wrap: wrap;
       gap: 10px;
     }
 
     .trait-btn {
-      padding: 8px;
-      border-radius: 10px;
-      background: var(--box);
-      border: 1px solid var(--border);
-      text-align: center;
-      cursor: pointer;
+      padding: 8px 12px;
+      border-radius: 8px;
       font-weight: 700;
+      cursor: pointer;
+      text-align: center;
+      border: 1px solid var(--border);
       color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 5px;
     }
 
-    .trait-btn img {
-      width: var(--badge-size);
-      height: var(--badge-size);
+    .trait-btn.clean {
+      background: var(--clean);
+    }
+
+    .trait-btn.gm {
+      background: var(--gm);
+    }
+
+    .trait-btn.ms {
+      background: var(--ms);
+    }
+
+    .trait-btn.sp {
+      background: var(--sp);
+    }
+
+    .trait-btn.spd {
+      background: var(--spd);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Top Row -->
-    <div class="top-row">
-      <input id="search-bar" placeholder="Search unit..." />
-      <div class="menu-btn"><div class="dots"></div></div>
-    </div>
-
     <!-- Calculator Panels -->
     <div class="calc-container">
-      <!-- Left Panel -->
       <div class="calc-panel">
-        <div class="calc-title">YOUR VALUE</div>
-        <button id="left-add-btn" style="width:76px;height:76px">+</button>
-        <div id="left-items" class="calc-area"></div>
-        <div class="calc-total"><span id="left-total">TOTAL VALUE: 0</span></div>
+        <div class="calc-title">Your Value</div>
+        <div id="your-zone" class="calc-zone"></div>
+        <button id="add-your-btn">+</button>
       </div>
-
-      <!-- Right Panel -->
       <div class="calc-panel">
-        <div class="calc-title">THEIR VALUE</div>
-        <button id="right-add-btn" style="width:76px;height:76px">+</button>
-        <div id="right-items" class="calc-area"></div>
-        <div class="calc-total"><span id="right-total">TOTAL VALUE: 0</span></div>
+        <div class="calc-title">Their Value</div>
+        <div id="their-zone" class="calc-zone"></div>
+        <button id="add-their-btn">+</button>
       </div>
     </div>
-
-    <div id="verdict" class="calc-verdict">NO ITEMS</div>
   </div>
 
   <!-- Trait Modal -->
-  <div id="trait-modal" class="trait-modal" style="display:none">
+  <div id="modal-overlay" class="modal-overlay">
     <div class="modal-box">
-      <div class="modal-title">SELECT TRAIT</div>
-      <div class="trait-grid">
-        <div class="trait-btn clean" data-trait="clean"><img src="soap-icon.png" alt="Clean Icon" /> Clean</div>
-        <div class="trait-btn gm" data-trait="gm"><img src="gold-icon.png" alt="GM Icon" /> GM</div>
-        <div class="trait-btn ms" data-trait="ms"><img src="green-icon.png" alt="MS Icon" /> Ms</div>
-        <div class="trait-btn sp" data-trait="sp"><img src="purple-icon.png" alt="SP Icon" /> Sp</div>
-        <div class="trait-btn spd" data-trait="spd"><img src="pink-icon.png" alt="SPD Icon" /> Spd</div>
+      <div class="modal-title">Choose Trait</div>
+      <div class="trait-list">
+        <button class="trait-btn clean" data-trait="clean">Clean</button>
+        <button class="trait-btn gm" data-trait="gm">GM</button>
+        <button class="trait-btn ms" data-trait="ms">Ms</button>
+        <button class="trait-btn sp" data-trait="sp">Sp</button>
+        <button class="trait-btn spd" data-trait="spd">Spd</button>
       </div>
+      <button id="modal-close">Cancel</button>
     </div>
   </div>
 
   <script>
-    const unitData = {
-      "fighter_g_toilet": { name: "Fighter G-Toilet", value: "1.9M", demand: "6/10" },
-    };
-    const leftItems = [];
-    const rightItems = [];
-    let currentSide = "left";
-
-    // Toggle Modal
-    const showModal = () => { document.getElementById("trait-modal").style.display = "flex"; };
-    const hideModal = () => { document.getElementById("trait-modal").style.display = "none"; };
-
-    const renderItems = () => {
-      const areas = { left: document.getElementById("left-items"), right: document.getElementById("right-items") };
-      ["left", "right"].forEach(side => {
-        areas[side].innerHTML = "";
-        const items = side === "left" ? leftItems : rightItems;
-        items.forEach(({ id, trait, quantity, demand }) => {
-          const thumb = document.createElement("div");
-          thumb.className = "calc-thumb";
-          thumb.style.backgroundImage = `url('placeholder.jpg')`;
-          thumb.innerHTML = `
-            <div class="img"></div>
-            <img class="trait-icon" src="${trait}-icon.png" alt="${trait} Icon" />
-            <div class="quantity">x${quantity}</div>
-            <div class="demand">Demand: ${demand}</div>`;
-          areas[side].appendChild(thumb);
-        });
-      });
+    const unitDatabase = {
+      fighter_g_toilet: { name: "Fighter G-Toilet", value: "1.9M", demand: "6/10", image: "placeholder.jpg" },
     };
 
-    const addItem = (side, trait) => {
-      const item = unitData["fighter_g_toilet"];
-      const existing = (side === "left" ? leftItems : rightItems).find(x => x.trait === trait);
-      if (existing) {
-        existing.quantity++;
+    let yourUnits = [];
+    let theirUnits = [];
+    let currentSide = "your";
+
+    const renderZone = (side) => {
+      const zone = document.getElementById(side === "your" ? "your-zone" : "their-zone");
+      const units = side === "your" ? yourUnits : theirUnits;
+      zone.innerHTML = units
+        .map(
+          (unit) => `
+        <div class="unit-thumbnail">
+          <img src="${unit.image}" alt="${unit.name}" />
+          <div class="trait-badge ${unit.trait}">${unit.trait.toUpperCase()}</div>
+          <div class="quantity-badge">x${unit.quantity}</div>
+          <div class="demand-label">Demand: ${unit.demand}</div>
+        </div>
+      `,
+        )
+        .join("");
+    };
+
+    const addUnit = (trait) => {
+      const units = currentSide === "your" ? yourUnits : theirUnits;
+      const existingUnit = units.find((unit) => unit.trait === trait);
+      if (existingUnit) {
+        existingUnit.quantity++;
       } else {
-        (side === "left" ? leftItems : rightItems).push({ id: "fighter_g_toilet", trait, quantity: 1, demand: item.demand });
+        units.push({
+          ...unitDatabase.fighter_g_toilet,
+          trait,
+          quantity: 1,
+        });
       }
-      renderItems();
+      renderZone(currentSide);
+      closeModal();
     };
 
-    document.querySelectorAll(".trait-btn").forEach(btn => {
+    document.querySelectorAll(".trait-btn").forEach((btn) => {
       btn.addEventListener("click", () => {
-        addItem(currentSide, btn.dataset.trait);
-        hideModal();
+        addUnit(btn.dataset.trait);
       });
     });
 
-    document.getElementById("left-add-btn").addEventListener("click", () => {
-      currentSide = "left";
-      showModal();
-    });
-    document.getElementById("right-add-btn").addEventListener("click", () => {
-      currentSide = "right";
-      showModal();
-    });
+    const showModal = (side) => {
+      document.getElementById("modal-overlay").style.display = "flex";
+      currentSide = side;
+    };
 
-    renderItems();
+    const closeModal = () => {
+      document.getElementById("modal-overlay").style.display = "none";
+    };
+
+    document.getElementById("add-your-btn").addEventListener("click", () => showModal("your"));
+    document.getElementById("add-their-btn").addEventListener("click", () => showModal("their"));
+    document.getElementById("modal-close").addEventListener("click", closeModal);
+
+    renderZone("your");
+    renderZone("their");
   </script>
 </body>
 </html>
