--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -1,326 +1,177 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Skibidi TD — Improved Calculator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --bg: #050506;
-      --card: #0f0f11;
-      --panel: #111214;
-      --box: #141618;
-      --border: #232529;
-      --muted: #9aa0a5;
-      --text: #fff;
-      --radius: 12px;
+<script>
+(function(){
+  // Small helper utilities (safe, no globals)
+  const $ = sel => document.querySelector(sel);
+  const $$ = sel => Array.from(document.querySelectorAll(sel));
+  const esc = s => String(s||'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
 
-      /* Colors for rarity */
-      --g-astral: linear-gradient(90deg, #7f00ff, #00ffd5);
-      --g-cosmic: linear-gradient(90deg, #b800e6, #6cedf0);
-      --g-divine: linear-gradient(90deg, #ff00c8, #2248ff);
-      --g-godly: linear-gradient(90deg, #7b00e6, #6367ff);
-      --g-exclusive: linear-gradient(90deg, #00d1ff, #4fe0a3);
-      --g-mythic: linear-gradient(90deg, #ff6d68, #ffb86b);
-      --g-legendary: linear-gradient(90deg, #ffd54a, #ff7a00);
+  if (typeof unitDatabase === 'undefined') {
+    console.warn('skibidi: unitDatabase not found — modal attach skipped.');
+    return;
+  }
 
-      /* Trait colors */
-      --clean: #4b7aff;
-      --gm: #f9a825;
-      --ms: #02c39a;
-      --sp: #9c27b0;
-      --spd: #e91e63;
+  // Find trait-overlay container in your markup (must exist)
+  const traitOverlay = document.getElementById('trait-overlay');
+  if (!traitOverlay) {
+    console.warn('skibidi: #trait-overlay not found — modal attach skipped.');
+    return;
+  }
+
+  // Try to find a "currentPickerSide"-like value exposed by your scripts (prefer existing)
+  const detectSide = () => {
+    if (window.currentPickerSide) return window.currentPickerSide;
+    if (window._skibidi && window._skibidi.currentPickerSide) return window._skibidi.currentPickerSide;
+    if (window._skibidi_calc && window._skibidi_calc.currentPickerSide) return window._skibidi_calc.currentPickerSide;
+    // fallback to left
+    return 'left';
+  };
+
+  // Safe call into existing calculator-add function(s) or dispatch an event
+  function callAddToSide(side, key, trait, qty) {
+    // Normalize qty to integer >=1
+    qty = Math.max(1, Math.floor(Number(qty) || 1));
+    if (window._skibidi && typeof window._skibidi.addToSide === 'function') {
+      try { window._skibidi.addToSide(side, key, trait, qty); return true; } catch(e){ console.warn(e); }
     }
-
-    * {
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
+    if (window._skibidi_calc && typeof window._skibidi_calc.addToSide === 'function') {
+      try { window._skibidi_calc.addToSide(side, key, trait, qty); return true; } catch(e){ console.warn(e); }
     }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
+    if (typeof addToSide === 'function') {
+      try { addToSide(side, key, trait, qty); return true; } catch(e){ console.warn(e); }
     }
+    // fallback: dispatch custom event with details; other code can listen for this
+    try {
+      window.dispatchEvent(new CustomEvent('skibidi:addToSide', { detail: { side, key, trait, qty } }));
+      return true;
+    } catch(e){ console.warn(e); }
+    return false;
+  }
 
-    body {
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+  // Build modal HTML (quantity field, trait radios, unit demand, add button)
+  function buildModalContent(unitKey) {
+    const u = unitDatabase[unitKey];
+    const demand = (u && u.baseStats && u.baseStats.demand) ? u.baseStats.demand : '';
+    // Gather trait keys: base Normal/Clean + unit-specific traits
+    const traitKeys = ['normal','clean'];
+    if (u && u.traits) {
+      const extra = Object.keys(u.traits).filter(t=>t && !traitKeys.includes(t.toLowerCase()));
+      traitKeys.push(...extra);
     }
-
-    .container {
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
-
-    /* Calculator Panels */
-    .calc-container {
-      display: flex;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .calc-panel {
-      flex: 1;
-      padding: 20px;
-      background: var(--panel);
-      border-radius: 12px;
-      border: 1px solid var(--border);
-    }
-
-    .calc-title {
-      text-align: center;
-      font-weight: 900;
-      text-transform: uppercase;
-      margin-bottom: 15px;
-    }
-
-    .calc-zone {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 76px);
-      gap: 10px;
-    }
-
-    /* Calculator thumbnails */
-    .unit-thumbnail {
-      position: relative;
-      background: var(--card);
-      width: 76px;
-      height: 76px;
-      border-radius: 12px;
-      border: 1px solid var(--border);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .unit-thumbnail img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 12px;
-    }
-
-    .trait-badge {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      padding: 3px 8px;
-      border-radius: 8px;
-      font-size: 12px;
-      font-weight: 700;
-      color: #fff;
-    }
-
-    .trait-badge.clean {
-      background: var(--clean);
-    }
-
-    .trait-badge.gm {
-      background: var(--gm);
-    }
-
-    .trait-badge.ms {
-      background: var(--ms);
-    }
-
-    .trait-badge.sp {
-      background: var(--sp);
-    }
-
-    .trait-badge.spd {
-      background: var(--spd);
-    }
-
-    .quantity-badge {
-      position: absolute;
-      bottom: 8px;
-      right: 8px;
-      background: #000;
-      color: #fff;
-      border-radius: 8px;
-      font-weight: 700;
-      font-size: 12px;
-      padding: 3px 6px;
-    }
-
-    .demand-label {
-      position: absolute;
-      bottom: 8px;
-      left: 8px;
-      background: var(--panel);
-      color: #fff;
-      border-radius: 8px;
-      padding: 3px 8px;
-      font-size: 12px;
-      font-weight: 700;
-    }
-
-    /* Trait Modal */
-    .modal-overlay {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.9);
-      z-index: 999;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-box {
-      background: var(--card);
-      border-radius: 12px;
-      padding: 20px;
-      border: 1px solid var(--border);
-      width: 320px;
-    }
-
-    .modal-title {
-      text-align: center;
-      font-weight: 900;
-      margin-bottom: 15px;
-    }
-
-    .trait-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .trait-btn {
-      padding: 8px 12px;
-      border-radius: 8px;
-      font-weight: 700;
-      cursor: pointer;
-      text-align: center;
-      border: 1px solid var(--border);
-      color: #fff;
-    }
-
-    .trait-btn.clean {
-      background: var(--clean);
-    }
-
-    .trait-btn.gm {
-      background: var(--gm);
-    }
-
-    .trait-btn.ms {
-      background: var(--ms);
-    }
-
-    .trait-btn.sp {
-      background: var(--sp);
-    }
-
-    .trait-btn.spd {
-      background: var(--spd);
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <!-- Calculator Panels -->
-    <div class="calc-container">
-      <div class="calc-panel">
-        <div class="calc-title">Your Value</div>
-        <div id="your-zone" class="calc-zone"></div>
-        <button id="add-your-btn">+</button>
-      </div>
-      <div class="calc-panel">
-        <div class="calc-title">Their Value</div>
-        <div id="their-zone" class="calc-zone"></div>
-        <button id="add-their-btn">+</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Trait Modal -->
-  <div id="modal-overlay" class="modal-overlay">
-    <div class="modal-box">
-      <div class="modal-title">Choose Trait</div>
-      <div class="trait-list">
-        <button class="trait-btn clean" data-trait="clean">Clean</button>
-        <button class="trait-btn gm" data-trait="gm">GM</button>
-        <button class="trait-btn ms" data-trait="ms">Ms</button>
-        <button class="trait-btn sp" data-trait="sp">Sp</button>
-        <button class="trait-btn spd" data-trait="spd">Spd</button>
-      </div>
-      <button id="modal-close">Cancel</button>
-    </div>
-  </div>
-
-  <script>
-    const unitDatabase = {
-      fighter_g_toilet: { name: "Fighter G-Toilet", value: "1.9M", demand: "6/10", image: "placeholder.jpg" },
-    };
-
-    let yourUnits = [];
-    let theirUnits = [];
-    let currentSide = "your";
-
-    const renderZone = (side) => {
-      const zone = document.getElementById(side === "your" ? "your-zone" : "their-zone");
-      const units = side === "your" ? yourUnits : theirUnits;
-      zone.innerHTML = units
-        .map(
-          (unit) => `
-        <div class="unit-thumbnail">
-          <img src="${unit.image}" alt="${unit.name}" />
-          <div class="trait-badge ${unit.trait}">${unit.trait.toUpperCase()}</div>
-          <div class="quantity-badge">x${unit.quantity}</div>
-          <div class="demand-label">Demand: ${unit.demand}</div>
+    // Build trait radio list
+    const traitRadiosHtml = traitKeys.map(t=>{
+      const id = 'trait_' + Math.random().toString(36).slice(2,8);
+      const label = (t.toLowerCase() === 'clean') ? 'Clean' : (t.toLowerCase() === 'normal') ? 'Normal' : t;
+      return `<label style="display:inline-flex;gap:8px;align-items:center;cursor:pointer;margin:6px 8px">
+                <input type="radio" name="sk_trait" value="${esc(t)}" ${t==='normal'?'checked':''}/>
+                <span style="font-weight:900">${esc(label)}</span>
+              </label>`;
+    }).join('');
+    // Full modal HTML (keeps simple inline styles to match your look)
+    const html = `
+      <div style="width:100%;max-width:520px;display:flex;flex-direction:column;gap:12px">
+        <div style="display:flex;justify-content:space-between;align-items:center">
+          <div style="font-weight:900;font-size:18px;text-transform:uppercase">Enter Quantity</div>
+          <button id="sk_modal_close" style="background:none;border:none;color:#fff;font-size:20px;cursor:pointer">×</button>
         </div>
-      `,
-        )
-        .join("");
-    };
 
-    const addUnit = (trait) => {
-      const units = currentSide === "your" ? yourUnits : theirUnits;
-      const existingUnit = units.find((unit) => unit.trait === trait);
-      if (existingUnit) {
-        existingUnit.quantity++;
-      } else {
-        units.push({
-          ...unitDatabase.fighter_g_toilet,
-          trait,
-          quantity: 1,
-        });
-      }
-      renderZone(currentSide);
-      closeModal();
-    };
+        <div>
+          <input id="sk_qty_input" type="number" min="1" value="1" style="width:100%;padding:12px;border-radius:10px;border:2px solid #4b2bd6;background:#0a0a0a;color:#fff;font-weight:900" placeholder="Quantity"/>
+        </div>
 
-    document.querySelectorAll(".trait-btn").forEach((btn) => {
-      btn.addEventListener("click", () => {
-        addUnit(btn.dataset.trait);
-      });
+        <div style="font-weight:900;color:#ddd">Traits</div>
+        <div id="sk_trait_list" style="display:flex;flex-wrap:wrap;gap:8px">${traitRadiosHtml}</div>
+
+        <div style="font-weight:700;color:#bbb">Demand: <span id="sk_demand">${esc(demand)}</span></div>
+
+        <div style="display:flex;justify-content:center;">
+          <button id="sk_modal_add" style="padding:12px 22px;border-radius:10px;background:linear-gradient(90deg,#7b00e6,#ff2d6f);border:2px solid rgba(255,255,255,0.05);color:#000;font-weight:900;cursor:pointer">Add</button>
+        </div>
+      </div>
+    `;
+    return html;
+  }
+
+  // Open trait-overlay modal for a unit (called when user clicks unit)
+  function openCalculatorModalForUnit(unitKey) {
+    // populate trait-overlay
+    traitOverlay.innerHTML = ''; // clear existing
+    traitOverlay.style.display = 'flex';
+    traitOverlay.style.justifyContent = 'center';
+    traitOverlay.style.alignItems = 'center';
+    traitOverlay.innerHTML = `<div style="padding:14px;max-width:560px;width:100%">${buildModalContent(unitKey)}</div>`;
+
+    // wire close button
+    $('#sk_modal_close')?.addEventListener('click', ()=>{ traitOverlay.style.display='none'; });
+    traitOverlay.addEventListener('click', function onOutside(e){
+      if (e.target === traitOverlay) { traitOverlay.style.display = 'none'; traitOverlay.removeEventListener('click', onOutside); }
     });
 
-    const showModal = (side) => {
-      document.getElementById("modal-overlay").style.display = "flex";
-      currentSide = side;
+    // add handler for modal Add
+    const addBtn = document.getElementById('sk_modal_add');
+    addBtn && addBtn.addEventListener('click', ()=>{
+      const qtyEl = document.getElementById('sk_qty_input');
+      const qty = qtyEl ? Number(qtyEl.value) : 1;
+      const sel = traitOverlay.querySelector('input[name="sk_trait"]:checked');
+      const trait = sel ? sel.value : 'normal';
+      const side = detectSide(); // left/right detection best-effort
+      const ok = callAddToSide(side, unitKey, trait, qty);
+      if (!ok) {
+        alert('Add failed: calculator function not found. Open console for details.');
+      }
+      // close
+      traitOverlay.style.display = 'none';
+    });
+  }
+
+  // Attach click handlers to unit cards (existing .unit-card elements)
+  function attachUnitClickHandlers() {
+    // Use event delegation since list may be re-rendered
+    document.addEventListener('click', function onDocClick(e){
+      // if user clicked a unit card or any child inside
+      const unitCard = e.target.closest('.unit-card');
+      if (!unitCard) return;
+      // ensure we don't act when clicking controls inside calculator etc.
+      const key = unitCard.getAttribute('data-unit') || unitCard.getAttribute('data-key') || unitCard.getAttribute('data-keyname') || unitCard.getAttribute('data-key') ;
+      // prefer data-unit attribute used in renderList
+      const unitKey = unitCard.getAttribute('data-unit') || unitCard.getAttribute('data-key') || unitCard.getAttribute('data-id');
+      if (!unitKey) return;
+      // If calculator is visible open modal; otherwise do nothing (respect your workflow)
+      const calcRoot = document.getElementById('calculator-root');
+      if (calcRoot && calcRoot.style.display !== 'none' && calcRoot.style.display !== '') {
+        // calculator root is shown (explicit style) — proceed
+        openCalculatorModalForUnit(unitKey);
+      } else {
+        // if calculator is hidden, we still open modal but warn user
+        openCalculatorModalForUnit(unitKey);
+      }
+    }, false);
+  }
+
+  // Small selector helpers used above (safe)
+  function $(sel){ return document.querySelector(sel); }
+  function $$(sel){ return Array.from(document.querySelectorAll(sel)); }
+
+  // Start: attach handlers immediately for existing cards and future ones
+  attachUnitClickHandlers();
+
+  // Also re-run attach if your page re-renders list (optional)
+  // If your code exposes window._skibidi or _skibidi.renderList, you can call attach again after render.
+  // Example: if window._skibidi exists:
+  if (window._skibidi && typeof window._skibidi.renderList === 'function') {
+    const orig = window._skibidi.renderList;
+    window._skibidi.renderList = function(){
+      const r = orig.apply(this, arguments);
+      setTimeout(() => attachUnitClickHandlers(), 40);
+      return r;
     };
+  }
 
-    const closeModal = () => {
-      document.getElementById("modal-overlay").style.display = "none";
-    };
+  // Also listen for a custom event to trigger modal programmatically:
+  window.addEventListener('skibidi:openAddModal', function(ev){
+    const key = ev && ev.detail && ev.detail.key; if (key) openCalculatorModalForUnit(key);
+  });
 
-    document.getElementById("add-your-btn").addEventListener("click", () => showModal("your"));
-    document.getElementById("add-their-btn").addEventListener("click", () => showModal("their"));
-    document.getElementById("modal-close").addEventListener("click", closeModal);
+  console.log('skibidi: calculator modal enhancer loaded (safe)');
 
-    renderZone("your");
-    renderZone("their");
-  </script>
-</body>
-</html>
+})();
+</script>
